--- a/app/assets/stylesheets/shared/logo.css
+++ b/app/assets/stylesheets/shared/logo.css
@@ -22,6 +22,7 @@
   width: var(--logo-width-large);
   height: var(--logo-height-large);
   border: var(--logo-border-large);
+  letter-spacing: var(--logo-letter-spacing-large);
 }
 
 .logo.large .logo-text {
@@ -30,6 +31,7 @@
 
 .logo.small {
   height: var(--logo-height-small);
+  letter-spacing: var(--logo-letter-spacing-small);
 }
 
 .logo.small .logo-text {
